[gd_scene load_steps=2 format=3 uid="uid://75oreaq6t75t"]

[ext_resource type="Script" uid="uid://dgxsspu67jwvr" path="res://ui/ui.gd" id="1_nb4k0"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nb4k0")

[node name="MowerProgressBar" type="ProgressBar" parent="."]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.95
anchor_right = 0.1
anchor_bottom = 0.95
offset_top = -27.0
offset_right = 630.0
grow_vertical = 0
step = 0.1

[node name="Pause" type="Button" parent="."]
process_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_top = 20.0
offset_right = -13.0
offset_bottom = 51.0
grow_horizontal = 0
text = "PAUSE"

[node name="PauseScreen" type="ColorRect" parent="."]
process_mode = 2
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.776471, 0.113725, 0.231373)

[node name="VolumeSlider" type="HSlider" parent="PauseScreen"]
layout_mode = 2
offset_left = 810.176
offset_top = 304.0
offset_right = 1117.18
offset_bottom = 320.0

[node name="Label" type="Label" parent="PauseScreen/VolumeSlider"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Volume: "
horizontal_alignment = 1

[node name="Unpause" type="Button" parent="PauseScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95
anchor_top = 0.01
anchor_right = 0.99
anchor_bottom = 0.03
offset_left = -39.4
offset_top = 13.52
offset_right = -2.47998
offset_bottom = 31.56
grow_horizontal = 0
text = "UNPAUSE"

[connection signal="pressed" from="Pause" to="." method="_on_pause_pressed"]
[connection signal="value_changed" from="PauseScreen/VolumeSlider" to="." method="_on_volume_slider_value_changed"]
[connection signal="pressed" from="PauseScreen/Unpause" to="." method="_on_unpause_pressed"]
